--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,6 @@
      fxLayout.xs="column"
      fxLayoutAlign.gt-md="space-around center"
      fxLayoutGap="10px">
-
 <mat-card *ngIf="dish" fxFlex>
   <mat-card-header>
     <div mat-card-avatar></div>
@@ -18,6 +17,10 @@
     </p>
   </mat-card-content>
 </mat-card>
+<div [hidden]="dish">
+    <mat-spinner></mat-spinner>
+    <h4>Loading . . . Please Wait</h4>
+  </div>
 
 <mat-card *ngIf="promotion" fxFlex>
   <mat-card-header>
@@ -32,19 +35,27 @@
     </p>
   </mat-card-content>
 </mat-card>
+<div [hidden]="promotion">
+    <mat-spinner></mat-spinner>
+    <h4>Loading . . . Please Wait</h4>
+  </div>
 
 <mat-card *ngIf="leader" fxFlex>
-    <mat-card-header>
-      <div mat-card-avatar></div>
-      <mat-card-title>
-        <h3>{{leader.name | uppercase}} {{leader.abbr | uppercase}} </h3>
-      </mat-card-title>
-    </mat-card-header>
-    <img mat-card-image src={{leader.image}} alt={{leader.name}}>
-    <mat-card-content>
-      <p>{{leader.description}}
-      </p>
-    </mat-card-content>
-  </mat-card>
+  <mat-card-header>
+    <div mat-card-avatar></div>
+    <mat-card-title>
+      <h3>{{leader.name | uppercase}} {{leader.abbr | uppercase}} </h3>
+    </mat-card-title>
+  </mat-card-header>
+  <img mat-card-image src={{leader.image}} alt={{leader.name}}>
+  <mat-card-content>
+    <p>{{leader.description}}
+    </p>
+  </mat-card-content>
+</mat-card>
+<div [hidden]="leader">
+  <mat-spinner></mat-spinner>
+  <h4>Loading . . . Please Wait</h4>
+</div>
 
 </div>
