--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -15,7 +15,7 @@
       </mat-card-content>
       <mat-card-actions>
         <button mat-button [routerLink]="['/dishdetail', prev]">
-          <span class="fa fa-chevron-left fa-lg"></span></button>        
+          <span class="fa fa-chevron-left fa-lg"></span></button>
         <button mat-button (click)="goBack()">BACK</button>
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
@@ -43,7 +43,40 @@
     </mat-list>
   </div>
   <div fxFlex [hidden]="dish">
-      <mat-spinner></mat-spinner>
-      <h4>Loading . . . Please Wait</h4>
+    <mat-spinner></mat-spinner>
+    <h4>Loading . . . Please Wait</h4>
+  </div>
+  <div fxFlex class="form-size">
+      <mat-list *ngIf="commentForm.valid">
+          <mat-list-item>
+            <p matLine>
+              <span> {{commentForm.value.comment }} </span>
+            </p>
+            <p matLine>
+              <span> {{commentForm.value.rating  }} Stars </span>
+            </p>
+            <p matLine>
+              <span>-- {{commentForm.value.author  }}</span>
+            </p>
+          </mat-list-item>
+        </mat-list>
+    <form novalidate [formGroup]="commentForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+      <p>
+        <mat-form-field class="full-width">
+          <input matInput formControlName="author" placeholder="Name" type="text" required>
+          <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
+        </mat-form-field>
+      </p>
+      <p>
+          <mat-slider matInput formControlName="rating" min="1" max="5" value="5" thumbLabel tickInterval="1"></mat-slider>
+      </p>
+      <p>
+        <mat-form-field class="full-width">
+          <textarea matInput formControlName="comment" placeholder="Your Comment" rows=12 required></textarea>
+          <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error>
+        </mat-form-field>
+      </p>
+      <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">Submit</button>
+    </form>
   </div>
 </div>
